# rl-algs

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: dqn_cartpole.yaml  ppo_cartpole.yaml  reinforce_cartpole.yaml
docs/: comparative_analysis.md
notebooks/: lunar_lander_reward_misspec.ipynb
results/: baseline_history.json  misspecified_history.json  mitigated_history.json  reward_misspec_summary.csv
rl_algs/: __init__.py
rl_algs/agents/: __init__.py  base.py  dqn.py  ppo.py  reinforce.py
rl_algs/data/: __init__.py  replay_buffer.py
rl_algs/envs/: __init__.py  misspecified_lunar_lander.py
rl_algs/networks/: __init__.py  mlp.py
rl_algs/training/: __init__.py  evaluator.py  trainer.py
rl_algs/utils/: __init__.py  env.py  torch.py
scripts/: run_experiment.py  run_reward_misspec_suite.py
tests/: test_agents.py  test_env_wrappers.py
